--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <nav class="nav">
                 <ul id="my-ul"
                     class="absolute top left-ng-full pd-2 height-100vh bg-main-dark width-250px block md-relative md-flex gap-m md-height-auto md-width-auto md-pd-0 md-left-unset md-top-unset transition-ease">
-                    <li><a href="./index.html" class="block my-1">Home</a></li>
-                    <li><a href="#" class="block my-1">About</a></li>
-                    <li><a href="#" class="block my-1">Contact</a></li>
-                    <li><a href="#" class="block my-1">Services</a></li>
-                    <li><a href="./post.html" class="block my-1">Blog</a></li>
+                    <li><a href="./index.html" class="block my-1 font-lg md-font-base">Home</a></li>
+                    <li><a href="#" class="block my-1 font-lg md-font-base">About</a></li>
+                    <li><a href="#" class="block my-1 font-lg md-font-base">Contact</a></li>
+                    <li><a href="#" class="block my-1 font-lg md-font-base">Services</a></li>
+                    <li><a href="./post.html" class="block my-1 font-lg md-font-base">Blog</a></li>
                 </ul>
                 <div class="collapse md-hidden pd-1 cursor-pointer" id="collapse"><svg viewBox='0 0 20 20'
                         xmlns='http://www.w3.org/2000/svg'>
@@ -104,7 +104,9 @@
             </div>
 
             <div class="blog-pager my-1 md-mg-0 mt-1 text-center">
-                <a href="#" class="btn load-more btn-main">Load More</a>
+                <a href="#" class="btn load-more btn-main">Load More
+                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="m16.843 10.211c.108-.141.157-.3.157-.456 0-.389-.306-.755-.749-.755h-8.501c-.445 0-.75.367-.75.755 0 .157.05.316.159.457 1.203 1.554 3.252 4.199 4.258 5.498.142.184.36.29.592.29.23 0 .449-.107.591-.291 1.002-1.299 3.044-3.945 4.243-5.498z"/></svg>
+                </a>
             </div>
 
         </article>
@@ -116,9 +118,9 @@
                     <div class="h5 text-upper">Search</div>
                 </div>
                 <div class="widget-content">
-                    <form action="#" class="flex gap-5px">
-                        <input type="search" placeholder="Search..."  class="width-70 mg-0">
-                        <button type="submit" class="btn-main width-30">Submit</button>
+                    <form action="#" class="flex">
+                        <input type="search" placeholder="Search..."  class="mg-0 round-0">
+                        <button type="submit" class="btn-main round-0 search-btn"><svg enable-background="new 0 0 32 32" id="Glyph" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.414,24.586l-5.077-5.077C23.386,17.928,24,16.035,24,14c0-5.514-4.486-10-10-10S4,8.486,4,14  s4.486,10,10,10c2.035,0,3.928-0.614,5.509-1.663l5.077,5.077c0.78,0.781,2.048,0.781,2.828,0  C28.195,26.633,28.195,25.367,27.414,24.586z M7,14c0-3.86,3.14-7,7-7s7,3.14,7,7s-3.14,7-7,7S7,17.86,7,14z" fill="currentColor" id="XMLID_223_"></path></svg></button>
                     </form>
                 </div>
             </div>
@@ -173,9 +175,9 @@
     <div class="footer-wrapper bg-light">
         <footer class="footer container">
 
-            <div class="up-footer py-2 md-flex justify-between">
+            <div class="up-footer py-2 md-flex flex-wrap lg-flex-no-wrap justify-between">
 
-                <div class="footer-row md-width-30 mb-2 md-mg-0">
+                <div class="footer-row md-width-45 lg-width-30 mb-2 lg-mg-0">
                     <div class="widget">
                         <div class="widget-title mb-1">
                             <div class="h5 text-upper">Recent Posts</div>
@@ -226,7 +228,7 @@
                     </div>
                 </div>
 
-                <div class="footer-row md-width-30 mb-2 md-mg-0">
+                <div class="footer-row md-width-45 lg-width-30 mb-2 lg-mg-0">
                     <div class="widget">
                         <div class="widget-title mb-1">
                             <div class="h5 text-upper">Popular Posts</div>
@@ -277,7 +279,7 @@
                     </div>
                 </div>
 
-                <div class="footer-row md-width-30">
+                <div class="footer-row md-width-45 lg-width-30">
                     <div class="widget">
                         <div class="widget-title mb-1">
                             <div class="h5">Random Posts</div>
