--- a/index.html
+++ b/index.html
@@ -12,24 +12,21 @@
 
 <body>
 
-    <div class="header-wrappper bg-main-dark color-grey-light">
+    <div class="header-wrappper bg-light box-shadow">
         <header class="header container flex justify-between items-center relative height-60px">
             <div class="header-logo max-width-250px">
                 <h1 class="font-large"><a href="index.html">Tech Begginer</a></h1>
             </div>
             <nav class="nav">
                 <ul id="my-ul"
-                    class="absolute top left-ng-full pd-2 height-100vh bg-main-dark width-250px block md-relative md-flex gap-m md-height-auto md-width-auto md-pd-0 md-left-unset md-top-unset transition-ease">
+                    class="absolute top left-ng-full pd-2 height-100vh bg-light width-250px block md-relative md-flex gap-m md-height-auto md-width-auto md-pd-0 md-left-unset md-top-unset transition-ease box-shadow md-box-shadow-none">
                     <li><a href="./index.html" class="block my-1 font-lg md-font-base">Home</a></li>
                     <li><a href="#" class="block my-1 font-lg md-font-base">About</a></li>
                     <li><a href="#" class="block my-1 font-lg md-font-base">Contact</a></li>
                     <li><a href="#" class="block my-1 font-lg md-font-base">Services</a></li>
                     <li><a href="./post.html" class="block my-1 font-lg md-font-base">Blog</a></li>
                 </ul>
-                <div class="collapse md-hidden pd-1 cursor-pointer" id="collapse"><svg viewBox='0 0 20 20'
-                        xmlns='http://www.w3.org/2000/svg'>
-                        <path d='M20 5V2H0v3h20zm0 6V8H0v3h20zm0 6v-3H0v3h20z' fill='currentColor'></path>
-                    </svg></div>
+                <div class="collapse md-hidden pd-1 cursor-pointer" id="collapse"><i class="menu-icon"></i></div>
             </nav>
         </header>
     </div>
@@ -37,66 +34,66 @@
     <main class="main container md-flex md-gap-1 my-1">
         <article class="article md-width-70">
 
-            <div class="index-post card mb-1 md-flex md-gap-1">
-                <div class="post-thumb md-width-40 height-200px round-5px"><img src="./images/1.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 md-width-60">
+            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/1.jpg" alt=""></div>
+                <div class="post-text mt-1 md-mg-0 flex-1">
                     <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
-                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#">Ruhab Amjad</a> - 7 May, 2024
+                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
                         modi laudantium!</p>
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-1">
-                <div class="post-thumb md-width-40 height-200px round-5px"><img src="./images/2.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 md-width-60">
+            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/2.jpg" alt=""></div>
+                <div class="post-text mt-1 md-mg-0 flex-1">
                     <h2 class="font-large"><a href="#">How to grow instagram account within 1 month</a></h2>
-                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#">Ruhab Amjad</a> - 7 May, 2024
+                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
                         modi laudantium!</p>
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-1">
-                <div class="post-thumb md-width-40 height-200px round-5px"><img src="./images/3.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 md-width-60">
+            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/3.jpg" alt=""></div>
+                <div class="post-text mt-1 md-mg-0 flex-1">
                     <h2 class="font-large"><a href="#">How to secure facebook account with just one click</a></h2>
-                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#">Ruhab Amjad</a> - 7 May, 2024
+                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
                         modi laudantium!</p>
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-1">
-                <div class="post-thumb md-width-40 height-200px round-5px"><img src="./images/4.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 md-width-60">
+           <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/4.jpg" alt=""></div>
+                <div class="post-text mt-1 md-mg-0 flex-1">
                     <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
-                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#">Ruhab Amjad</a> - 7 May, 2024
+                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
                         modi laudantium!</p>
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-1">
-                <div class="post-thumb md-width-40 height-200px round-5px"><img src="./images/5.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 md-width-60">
+            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/5.jpg" alt=""></div>
+                <div class="post-text mt-1 md-mg-0 flex-1">
                     <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
-                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#">Ruhab Amjad</a> - 7 May, 2024
+                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
                         modi laudantium!</p>
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-1">
-                <div class="post-thumb md-width-40 height-200px round-5px"><img src="./images/6.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 md-width-60">
+            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/6.jpg" alt=""></div>
+                <div class="post-text mt-1 md-mg-0 flex-1">
                     <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
-                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#">Ruhab Amjad</a> - 7 May, 2024
+                    <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
                         modi laudantium!</p>
@@ -104,28 +101,26 @@
             </div>
 
             <div class="blog-pager my-1 md-mg-0 mt-1 text-center">
-                <a href="#" class="btn load-more btn-main">Load More
-                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="m16.843 10.211c.108-.141.157-.3.157-.456 0-.389-.306-.755-.749-.755h-8.501c-.445 0-.75.367-.75.755 0 .157.05.316.159.457 1.203 1.554 3.252 4.199 4.258 5.498.142.184.36.29.592.29.23 0 .449-.107.591-.291 1.002-1.299 3.044-3.945 4.243-5.498z"/></svg>
-                </a>
+                <a href="#" class="btn load-more btn-light box-shadow">Load More <i class="chevron-down-icon light-icon"></i></a>
             </div>
 
         </article>
 
         <aside class="aside md-width-30">
 
-            <div class="widget card mb-1">
+            <div class="widget card mb-1 box-shadow">
                 <div class="widget-title mb-1">
                     <div class="h5 text-upper">Search</div>
                 </div>
                 <div class="widget-content">
                     <form action="#" class="flex">
-                        <input type="search" placeholder="Search..."  class="mg-0 round-0">
-                        <button type="submit" class="btn-main round-0 search-btn"><svg enable-background="new 0 0 32 32" id="Glyph" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.414,24.586l-5.077-5.077C23.386,17.928,24,16.035,24,14c0-5.514-4.486-10-10-10S4,8.486,4,14  s4.486,10,10,10c2.035,0,3.928-0.614,5.509-1.663l5.077,5.077c0.78,0.781,2.048,0.781,2.828,0  C28.195,26.633,28.195,25.367,27.414,24.586z M7,14c0-3.86,3.14-7,7-7s7,3.14,7,7s-3.14,7-7,7S7,17.86,7,14z" fill="currentColor" id="XMLID_223_"></path></svg></button>
+                        <input type="search" placeholder="Search..."  class="mg-0 round-top-right-0 round-bottom-right-0">
+                        <button type="submit" class="btn-grey round-top-left-0 round-bottom-left-0 search-btn border"><i class="search-icon"></i></button>
                     </form>
                 </div>
             </div>
 
-            <div class="widget card">
+            <div class="widget card box-shadow">
                 <div class="widget-title mb-1">
                     <div class="h5 text-upper">Recent Posts</div>
                 </div>
@@ -172,7 +167,7 @@
         </aside>
     </main>
 
-    <div class="footer-wrapper bg-light">
+    <div class="footer-wrapper bg-light box-shadow">
         <footer class="footer container">
 
             <div class="up-footer py-2 md-flex flex-wrap lg-flex-no-wrap justify-between">
@@ -333,7 +328,7 @@
             </div>
 
             <div class="footer-copyright py-1 border-top">
-                Copyright &#169; 2024 - <a href="#">Tech Begginer</a>
+                Copyright &#169; 2024 - <a href="#" class="color-main">Tech Begginer</a>
             </div>
 
         </footer>
