--- a/post.html
+++ b/post.html
@@ -12,35 +12,33 @@
 
 <body>
 
-    <div class="header-wrappper bg-main-dark color-grey-light">
+    <div class="header-wrappper bg-light box-shadow">
         <header class="header container flex justify-between items-center relative height-60px">
             <div class="header-logo max-width-250px">
                 <h1 class="font-large"><a href="index.html">Tech Begginer</a></h1>
             </div>
             <nav class="nav">
                 <ul id="my-ul"
-                    class="absolute top left-ng-full pd-2 height-100vh bg-main-dark width-250px block md-relative md-flex gap-m md-height-auto md-width-auto md-pd-0 md-left-unset md-top-unset transition-ease">
+                    class="absolute top left-ng-full pd-2 height-100vh bg-light width-250px block md-relative md-flex gap-m md-height-auto md-width-auto md-pd-0 md-left-unset md-top-unset transition-ease box-shadow md-box-shadow-none">
                     <li><a href="./index.html" class="block my-1 font-lg md-font-base">Home</a></li>
                     <li><a href="#" class="block my-1 font-lg md-font-base">About</a></li>
                     <li><a href="#" class="block my-1 font-lg md-font-base">Contact</a></li>
                     <li><a href="#" class="block my-1 font-lg md-font-base">Services</a></li>
                     <li><a href="./post.html" class="block my-1 font-lg md-font-base">Blog</a></li>
                 </ul>
-                <div class="collapse md-hidden pd-1 cursor-pointer" id="collapse"><svg viewBox='0 0 20 20'
-                        xmlns='http://www.w3.org/2000/svg'>
-                        <path d='M20 5V2H0v3h20zm0 6V8H0v3h20zm0 6v-3H0v3h20z' fill='currentColor'></path>
-                    </svg></div>
+                <div class="collapse md-hidden pd-1 cursor-pointer" id="collapse"><i class="menu-icon"></i></div>
             </nav>
         </header>
     </div>
 
     <main class="main container md-flex md-gap-1 my-1">
+
         <article class="article md-width-70">
 
-            <div class="item-post card my-1 md-mg-0">
+            <div class="item-post card my-1 md-mg-0 box-shadow">
                 <p class="breadcrumb mb-s font-md color-dark-grey"><a href="#">Home</a> > <a href="#">How to</a></p>
                 <h1>How to speed up computer/pc without any software</h1>
-                <p class="authors-meta mt-s font-md color-dark-grey">by <a href="#">Ruhab Amjad</a> - 8 May, 2024</p>
+                <p class="authors-meta mt-s font-md color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 8 May, 2024</p>
                 <div class="post-body mt-1">
                     <p class="mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati est minus veniam. Deleniti voluptate quo beatae, ipsum dolore esse, eius illum veniam architecto quasi incidunt, minima dicta nihil omnis facilis consequuntur repellendus odit. A sapiente iste fugit vel voluptate fuga?</p>
                     <p class="mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsum dolorem suscipit, magni quo nostrum quibusdam sit fugit omnis ullam?</p>
@@ -75,19 +73,19 @@
 
         <aside class="aside md-width-30">
 
-            <div class="widget card mb-1">
+            <div class="widget card mb-1 box-shadow">
                 <div class="widget-title mb-1">
                     <div class="h5 text-upper">Search</div>
                 </div>
                 <div class="widget-content">
                     <form action="#" class="flex">
-                        <input type="search" placeholder="Search..."  class="mg-0 round-0">
-                        <button type="submit" class="btn-main round-0 search-btn"><svg enable-background="new 0 0 32 32" id="Glyph" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M27.414,24.586l-5.077-5.077C23.386,17.928,24,16.035,24,14c0-5.514-4.486-10-10-10S4,8.486,4,14  s4.486,10,10,10c2.035,0,3.928-0.614,5.509-1.663l5.077,5.077c0.78,0.781,2.048,0.781,2.828,0  C28.195,26.633,28.195,25.367,27.414,24.586z M7,14c0-3.86,3.14-7,7-7s7,3.14,7,7s-3.14,7-7,7S7,17.86,7,14z" fill="currentColor" id="XMLID_223_"></path></svg></button>
+                        <input type="search" placeholder="Search..."  class="mg-0 round-top-right-0 round-bottom-right-0">
+                        <button type="submit" class="btn-grey round-top-left-0 round-bottom-left-0 search-btn border"><i class="search-icon"></i></button>
                     </form>
                 </div>
             </div>
 
-            <div class="widget card">
+            <div class="widget card box-shadow">
                 <div class="widget-title mb-1">
                     <div class="h5 text-upper">Recent Posts</div>
                 </div>
@@ -134,7 +132,7 @@
         </aside>
     </main>
 
-    <div class="footer-wrapper bg-light">
+    <div class="footer-wrapper bg-light box-shadow">
         <footer class="footer container">
 
             <div class="up-footer py-2 md-flex flex-wrap lg-flex-no-wrap justify-between">
@@ -295,7 +293,7 @@
             </div>
 
             <div class="footer-copyright py-1 border-top">
-                Copyright &#169; 2024 - <a href="#">Tech Begginer</a>
+                Copyright &#169; 2024 - <a href="#" class="color-main">Tech Begginer</a>
             </div>
 
         </footer>
