Some issues fixed.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header-wrappper bg-light box-shadow">
         <header class="header container flex justify-between items-center relative height-60px">
             <div class="header-logo max-width-250px">
-                <h1 class="font-large"><a href="index.html">Tech Begginer</a></h1>
+                <h1 class="font-large color-inherit"><a href="index.html">Tech Begginer</a></h1>
             </div>
             <nav class="nav">
                 <ul id="my-ul"
@@ -31,12 +31,12 @@
         </header>
     </div>
 
-    <main class="main container md-flex md-gap-1 my-1">
-        <article class="article md-width-70">
+    <main class="main container lg-flex md-gap-2 my-2">
+        <article class="article lg-width-70">
 
-            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
-                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/1.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 flex-1">
+            <div class="index-post bg-light mb-2 sm-flex round-5px box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-180px round-5px"><img src="./images/1.jpg" alt=""></div>
+                <div class="post-text pd-m flex-1">
                     <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
                     <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
@@ -45,10 +45,10 @@
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
-                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/2.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 flex-1">
-                    <h2 class="font-large"><a href="#">How to grow instagram account within 1 month</a></h2>
+            <div class="index-post bg-light mb-2 sm-flex round-5px box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-180px round-5px"><img src="./images/2.jpg" alt=""></div>
+                <div class="post-text pd-m flex-1">
+                    <h2 class="font-large"><a href="#">How to get hacked facebook account back from hacker</a></h2>
                     <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
@@ -56,10 +56,10 @@
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
-                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/3.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 flex-1">
-                    <h2 class="font-large"><a href="#">How to secure facebook account with just one click</a></h2>
+            <div class="index-post bg-light mb-2 sm-flex round-5px box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-auto round-5px"><img src="./images/3.jpg" alt=""></div>
+                <div class="post-text pd-m flex-1">
+                    <h2 class="font-large"><a href="#">How to grow instagram account without any investment in 15 days</a></h2>
                     <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
@@ -67,10 +67,10 @@
                 </div>
             </div>
 
-           <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
-                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/4.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 flex-1">
-                    <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
+            <div class="index-post bg-light mb-2 sm-flex round-5px box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-180px round-5px"><img src="./images/4.jpg" alt=""></div>
+                <div class="post-text pd-m flex-1">
+                    <h2 class="font-large"><a href="#">How to use linkedin for freelancing | optimize linkedin to get jobs</a></h2>
                     <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
@@ -78,10 +78,10 @@
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
-                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/5.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 flex-1">
-                    <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
+            <div class="index-post bg-light mb-2 sm-flex round-5px box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-180px round-5px"><img src="./images/5.jpg" alt=""></div>
+                <div class="post-text pd-m flex-1">
+                    <h2 class="font-large"><a href="#">Is blogging still a good carrier ? after ai and google core update</a></h2>
                     <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
@@ -89,10 +89,10 @@
                 </div>
             </div>
 
-            <div class="index-post card mb-1 md-flex md-gap-m box-shadow">
-                <div class="post-thumb height-200px md-width-250px md-height-150px round-5px"><img src="./images/6.jpg" alt=""></div>
-                <div class="post-text mt-1 md-mg-0 flex-1">
-                    <h2 class="font-large"><a href="#">How to delete facebook account permanently</a></h2>
+            <div class="index-post bg-light mb-2 sm-flex round-5px box-shadow">
+                <div class="post-thumb height-200px md-width-250px md-height-180px round-5px"><img src="./images/6.jpg" alt=""></div>
+                <div class="post-text pd-m flex-1">
+                    <h2 class="font-large"><a href="#">How to do seo for new website | Comprehensive Guide for Newbies this and that and thos</a></h2>
                     <p class="authors-meta font-md my-1 color-dark-grey">by <a href="#" class="color-main">Ruhab Amjad</a> - 7 May, 2024
                     </p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus illum officia, placeat ab
@@ -100,15 +100,15 @@
                 </div>
             </div>
 
-            <div class="blog-pager my-1 md-mg-0 mt-1 text-center">
-                <a href="#" class="btn load-more btn-light box-shadow">Load More <i class="chevron-down-icon light-icon"></i></a>
+            <div class="blog-pager my-2 lg-mg-0 text-center">
+                <a href="#" class="btn load-more btn-main box-shadow">Load More <i class="chevron-down-light-icon light-icon"></i></a>
             </div>
 
         </article>
 
-        <aside class="aside md-width-30 md-sticky md-top-1 height-full">
+        <aside class="aside lg-width-30 md-sticky md-top-1 height-full">
 
-            <div class="widget card mb-1 box-shadow">
+            <div class="widget card mb-2 box-shadow">
                 <div class="widget-title mb-1">
                     <div class="h5 text-upper">Search</div>
                 </div>
@@ -277,7 +277,7 @@
                 <div class="footer-row md-width-45 lg-width-30">
                     <div class="widget">
                         <div class="widget-title mb-1">
-                            <div class="h5">Random Posts</div>
+                            <div class="h5 text-upper">Random Posts</div>
                         </div>
                         <div class="widget-content">
 
