--- a/post.html
+++ b/post.html
@@ -15,7 +15,7 @@
     <div class="header-wrappper bg-light box-shadow">
         <header class="header container flex justify-between items-center relative height-60px">
             <div class="header-logo max-width-250px">
-                <h1 class="font-large"><a href="index.html">Tech Begginer</a></h1>
+                <h1 class="font-large color-inherit"><a href="index.html">Tech Begginer</a></h1>
             </div>
             <nav class="nav">
                 <ul id="my-ul"
@@ -31,9 +31,8 @@
         </header>
     </div>
 
-    <main class="main container md-flex md-gap-1 my-1">
-
-        <article class="article md-width-70">
+    <main class="main container lg-flex md-gap-2 my-2">
+        <article class="article lg-width-70">
 
             <div class="item-post card my-1 md-mg-0 box-shadow">
                 <p class="breadcrumb mb-s font-md color-dark-grey"><a href="#">Home</a> > <a href="#">How to</a></p>
@@ -71,9 +70,9 @@
 
         </article>
 
-        <aside class="aside md-width-30 md-sticky md-top-1 height-full">
+        <aside class="aside lg-width-30 md-sticky md-top-1 height-full">
 
-            <div class="widget card mb-1 box-shadow">
+            <div class="widget card mb-2 box-shadow">
                 <div class="widget-title mb-1">
                     <div class="h5 text-upper">Search</div>
                 </div>
@@ -242,7 +241,7 @@
                 <div class="footer-row md-width-45 lg-width-30">
                     <div class="widget">
                         <div class="widget-title mb-1">
-                            <div class="h5">Random Posts</div>
+                            <div class="h5 text-upper">Random Posts</div>
                         </div>
                         <div class="widget-content">
 
